# quickpass

./: LICENSE  README.md  pyproject.toml
src/quickpass/: core.py
tests/: test_core.py
