[project]
name = "quickpass"
version = "0.1.0"
description = "QuickPass - secure password generator using cryptographically strong randomness"
authors = [
    {name = "prs2rnn",email = "developer.prs2rnn@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["password", "generator", "security"]
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "quickpass", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
[project.scripts]
quickpass = "quickpass.core:main"
